# fash-back-website

./: .flake8  Makefile  README.rst  pyproject.toml
CoreBackend/: manage.py
CoreBackend/backend/: asgi.py  urls.py  wsgi.py
CoreBackend/backend/settings/: __init__.py  base.py  docker.py  envvars.py
CoreBackend/backend/settings/templates/: settings.dev.py
CoreBackend/core/utils/: misc.py  settings.py
